<resources>
    <string name="app_name">Any stream</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play </string>
    <string name="action_tv_guid"> Guid </string>
    <string name="backdrop_title">Live TV</string>
    <string name="backdrop_subtitle">Add a Media Link</string>
    <string name="af_tab">Afghan</string>
    <string name="iran_tab">iran</string>
    <string name="sport_tab">sport</string>
    <string name="other_tab">other</string>
    <string name="stream_name">Stream naem</string>
    <string name="live_tv">Live TV</string>
    <string name="ip_tv">IP TV</string>
    <string name="about">About</string>
    <string name="update_item">Update</string>
    <string name="delete_item">Delete</string>
    <string name="play_item">Play</string>

    <string name="cancel">Cancel</string>
    <string name="light_mode">Light Mode</string>
    <string name="sugessted_links">Some Media sources</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="paste_a_valid_stream">Paste a valid stream or media Link</string>
    <string name="past_an_icon">Past an icon/image Link</string>
    <string name="description">Description/memo</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System Default</string>
    <string name="english">English</string>
    <string name="persian">Persian</string>
    <string name="german">Deutsch</string>
    <string name="enter_stream_details">Enter stream details</string>
    <string name="help">Help</string>
    <string name="set_your_device_language">Set your device language</string>
    <string name="contact_and_support">Contact and Support</string>
    <string name="dev_support">Support Dev</string>
    <string name="settings_text">Settings</string>
    <string name="user_name_text">Write your Name</string>
    <string name="appearance_text">Appearance</string>
    <string name="language_setting_text">English</string>
    <string name="lang_text">Language</string>
    <string name="appearance_name_text">Dark</string>
    <string name="appearance_arrow"><![CDATA[>]]></string>
    <string name="open_source">"Third Party License "</string>
    <string name="share_text">Share</string>
    <string name="suggest_text">Web site</string>
    <string name="app_version">App version</string>
    <string name="write_name">Enter your name</string>
    <string name="follow_us_online">For donation or contact Follow us</string>
    <string name="ok">Ok</string>
    <string name="write_again">No User Name</string>
    <string name="quality">Quality</string>
    <string name="video_playing">Playing</string>

</resources>