<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottomsheet_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_stream_details"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/text_title"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>

    <EditText
        android:id="@+id/ip_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_name"
        android:inputType="textPersonName"
        android:paddingBottom="16dp"
        android:singleLine="true"
        android:maxLength="10"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ip_tv_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/paste_a_valid_stream"
        android:inputType="textWebEmailAddress"
        android:paddingBottom="16dp"
        android:singleLine="true"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/ip_tv_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/past_an_icon"
        android:inputType="text"
        android:paddingBottom="16dp"
        android:singleLine="true"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/ip_tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        android:paddingBottom="16dp"
        android:maxLength="100"
        android:importantForAutofill="no" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">
        <Button
            android:id="@+id/bts_hlep"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/help"
            android:layout_margin="5dp"

            />
        <Button
            android:id="@+id/bts_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/cancel_dialog"
            android:layout_margin="5dp"

            />

        <Button
            android:id="@+id/bts_ok"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:text="Ok" />


    </LinearLayout>







</LinearLayout>