<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottomsheet_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update stream details"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/text_title"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_tv_title"
        android:hint="@string/enter_a_name"
        tools:ignore="Autofill"
        android:layout_below="@id/text_title"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/ip_tv_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/paste_a_valid_stream"
        android:layout_below="@+id/ip_tv_title"
        android:paddingBottom="16dp"
        />
    <EditText
        android:id="@+id/ip_tv_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/past_an_icon"
        android:layout_below="@+id/ip_tv_url"
        android:paddingBottom="16dp"/>


    <EditText
        android:id="@+id/ip_tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="@string/description"
        android:layout_below="@id/ip_tv_icon"
        android:paddingBottom="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:id="@+id/bts_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="Cancel"
            android:layout_margin="5dp"

            />

        <Button
            android:id="@+id/bts_ok"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:text="Update" />


    </LinearLayout>







</LinearLayout>